port PaperPlatform to Java11